k8s/odoo-prod-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: odoo-prod

  namespace: odoo-prod

spec:

  replicas: 3

  selector:

    matchLabels:

      app: odoo

      env: production

  strategy:

    type: RollingUpdate

    rollingUpdate:

      maxSurge: 1

      maxUnavailable: 0

  template:

    metadata:

      labels:

        app: odoo

        env: production

    spec:

      nodeSelector:

        role: prod

        eks.amazonaws.com/nodegroup: prod-pool

      tolerations:

        - key: "role"

          operator: "Equal"

          value: "prod"

          effect: "NoSchedule"

      securityContext:

        runAsUser: 0

        runAsGroup: 0

        fsGroup: 0

      terminationGracePeriodSeconds: 60

      containers:

        - name: odoo

          image: ismail20022/odoo-15-boto3

          ports:

            - containerPort: 8069

            - containerPort: 8072

          volumeMounts:

            - name: odoo-config

              mountPath: /etc/odoo/odoo.conf

              subPath: odoo.conf

            - name: odoo-data

              mountPath: /var/lib/odoo

            - name: odoo-logs

              mountPath: /var/log/odoo

            - name: odoo-addons

              mountPath: /mnt/extra-addons

      #    resources:
       #     requests:
        #      memory: "512Mi"
         #     cpu: "250m"      # HPA calcule le % par rapport à cette valeur
          #  limits:
           #   memory: "2Gi"
            #  cpu: "1000m"

      volumes:

        - name: odoo-config

          configMap:

            name: odoo-config

        - name: odoo-data

          persistentVolumeClaim:

            claimName: odoo-prod-data-pvc

        - name: odoo-logs

          persistentVolumeClaim:

            claimName: odoo-prod-logs-pvc

        - name: odoo-addons

          persistentVolumeClaim:

            claimName: odoo-prod-addons-pvc
