k8s/odoo-test-service.yml

apiVersion: v1

kind: Service

metadata:

  name: odoo-service

  namespace: odoo-test

spec:

  selector:

    app: odoo

    env: test

  type: ClusterIP

  ports:

    - name: http

      port: 80

      targetPort: 8069

    - name: longpolling

      port: 8072

      targetPort: 8072
